--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   # cached network image
   cached_network_image: ^2.0.0
 
+  # flutter video compress
+  flutter_video_compress: ^0.3.7+8
+
+  # video player
+  video_player: ^0.10.8+1
+
   # shimmer
   shimmer: ^1.1.0
 
